--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -130,7 +130,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
    _*уточнить метод и инструмент которым проводится обследования_  
 3)	Составления технического заключения  
 4)	Составления карты дефектов на плане кровли   
-   _*(необходимо иметь план кровли, чертеж, проектную документацию)_  
+   _*(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию)_  
 5)	Составления дефектной ведомости  
 
 __Дополнительные услуги:__  
