--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -8,17 +8,87 @@ permalink: /электро-векторное-картирование
 ---
 {% include el-img.html name="0/1.2.1.jpg"  %} 
 
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __Электро-искровое дефектоскопирование__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
- Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
- На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
- 
-___*Альтернативное название этого метода - метод ЭВК Электро-векторное картирование___  
+* На плоских крышах могут происходить утечки по различным причинам и в любой момент их срока службы. Рабочие могут случайно (и неосознанно) пробить водонепроницаемую мембрану крыши еще до завершения строительства. Экстремальные погодные условия, мусор и плохое строительство могут привести к протечке кровли. Эти протечки часто слишком малы, чтобы заметить невооруженным глазом, но если их оставить, они могут привести к существенному повреждению конструкции здания в кратчайшие сроки.  
 
-#### Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
- а) Система эксплуатируемой крыши с зелеными насаждениями.  
- б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
- в) Система неэксплуатируемой инверсионной крыши.  
- г) Система неэксплуатируемой балластной крыши.  
+* Обнаружение и ремонт протечек в плоских крышах необходим и имеет смысл при первой же возможности; тем более, что __[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})__ предлагает простой и легкий в использовании путь быстро обнаружить местонахождение протечек. 
+
+* Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __Электро-искровое дефектоскопирование__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
+* Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
+* На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+ 
+*Альтернативное название этого метода - метод ЭВК Электро-векторное картирование  
+###### &nbsp;
+1.	ЭИД что это такое?
+2.	Какие задачи стоят перед этим методом?
+3.	Когда и как проводится обследования?
+4.	Что мы получим в итоге?
+5.	Сколько это стоит?
+6.	Каков принцип работы ЭИД?
+###### &nbsp;
+### __ЭИД что это такое?__  
+
+* ЭИД – это метод диагностики повреждений кровельных мембран (пвх, эпдм, тпо).  
+
+* Метод Электро-искровое дефектоскопирование (ЭИД) является неразрушающим методом контроля состояния гидроизоляционного слоя кровли.  
+
+* Данный метод диагностики проводится специалистами по диагностике и ремонту кровельного покрытия с применением аппарата – ЭЛЕКТРО ИСКРОВОЙ ДЕФЕКТОСКОП.   
+
+На сегодняшний день данный метод является самым эффективным методом поиска дефектов мембранных кровельных покрытий.  
+###### &nbsp;
+
+__Какие задачи стоят перед этим методом?__
+
+* Задача быстро найти и локализовать все места повреждения на кровельном покрытии.
+
+* ЭИД или (ЭВК) выявляет повреждения кровельного покрытия, таких как: порезы, проколы, ожоги, несваренные швы.
+
+* Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
+а) Система эксплуатируемой крыши с зелеными насаждениями.
+б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.
+в) Система неэксплуатируемой инверсионной крыши.
+г) Система неэксплуатируемой балластной крыши.
+###### &nbsp;
+__Когда проводится обследования?__
+
+* Данный вид обследования можно проводить в любую погоду при температуре не ниже +5*
+###### &nbsp;
+__Как проводится обследования?__
+
+* Для проведения обследования никакой предварительной подготовки от Вас не требуется. 
+* Нашим специалистам потребуется место подключения воды, для проливки кровельного покрытия и место подключения электропитания 220в. 
+
+* Оператор ЭИД, проходит по всей поверхности кровли и маркирует поврежденные места, после чего они вносятся в [(Карту дефектов кровли)]({% link 7.1.2.2_final_step.md %})
+
+* По завершению диагностики производится сбор, обработка данных и составляется Технический отчет о состоянии кровельного покрытия. 
+###### &nbsp;
+__Что мы получим в итоге?__
+
+1)	Полную и объективную информацию о состоянии кровельного покрытия, с точным указанием количества и мест повреждения кровельного покрытия.  
+2)	Промаркированные поврежденные места на кровле, для быстрого нахождения поврежденных мест ремонтной бригадой. 
+3)	Технический отчет о состоянии кровельного покрытия.
+4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.     
+###### &nbsp;
+
+__Сколько это стоит?__
+
+* Цена на проведение работ составляется исходя из технического задания.
+###### &nbsp;
+__Пример технического задания:__
+
+1)	Инструментальное обследование - кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие.  
+2)	Составление Технического отчета.  
+3)	Составление Карты дефектов на кровле.   
+*(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию).
+
+__Цена проведения ЭИД = 60р.м2__
+
+*цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)
+
+
+
+
+
+  
   
 * **[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**  
 * **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
@@ -33,7 +103,7 @@ ___*Альтернативное название этого метода - ме
 ###### &nbsp;   
 #### Испытания Плоских Кровельных Материалов
 
-*Детектор протечек Buckleys Wet Roof Pro’ может определить и обнаружить местонахождение утечки внутри плоской крыши.*
+
 
 На плоских крышах могут происходить утечки по различным причинам и в любой момент их срока службы. Рабочие могут случайно (и неосознанно) пробить водонепроницаемую мембрану крыши еще до завершения строительства. Экстремальные погодные условия, мусор и плохое строительство могут привести к протечке кровли. Эти протечки часто слишком малы, чтобы заметить невооруженным глазом, но если их оставить, они могут привести к существенному повреждению конструкции здания в кратчайшие сроки.
 
@@ -44,42 +114,12 @@ ___*Альтернативное название этого метода - ме
 ### Типичная однослойная плоская конструкция крыши
 {% include el-img.html name="evk/EVK.007.jpg" align="left" width="1/2" %}
 ###### &nbsp;  
-*Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
-### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
-{% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
-Найдите протечки крыши в условиях влажной погоды
-###### &nbsp;  
 
-### Мокрые Крыши Про
-**Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.
 
-**Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-{% include el-img.html name="evk/EVK.002.jpg" align="left" width="1/2" %}
 
-Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
-Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
-###### &nbsp;  
-**Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-{% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/2" %}
-
-**Особенности:**
-* Тест до 400 м2 в день
-* Точечные утечки, которые слишком малы, чтобы найти невооруженным глазом
-* Направляет оператора к дефекту кровли
-* Простота настройки и использования
-* Тест на протечки круглый год
-* Способный испытывать любую толщину мембраны
-* Дискретная звуковая сигнализация
-###### &nbsp;  
-**Технические характеристики:**
-* Напряжение тока импульс выхода: DC 32V
-* Выходная мощность: <10 Вт
-* Максимальная относительная влажность: 80% без конденсации
-* Рабочая высота: до 2000 м
-* Диапазон температур от +4°C до +40°C
 
 ### **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**
 
@@ -88,7 +128,7 @@ ___*Альтернативное название этого метода - ме
 3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле)  
 4)	Описание найденных нарушений, дефектная ведомость  
 5)	Фотофиксация состояния кровли и найденных нарушений  
-6)	Рекомендации  
+  
 #### Карта дефектов на кровле:
 {% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
 {% include el-img.html name="evk/KDK.002.png" align="left" width="1/2" %}
