--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -10,11 +10,12 @@ permalink: /электро-векторное-картирование
 
 * На плоских крышах могут происходить утечки по различным причинам и в любой момент их срока службы. Рабочие могут случайно (и неосознанно) пробить водонепроницаемую мембрану крыши еще до завершения строительства. Экстремальные погодные условия, мусор и плохое строительство могут привести к протечке кровли. Эти протечки часто слишком малы, чтобы заметить невооруженным глазом, но если их оставить, они могут привести к существенному повреждению конструкции здания в кратчайшие сроки.  
 
-* Обнаружение и ремонт протечек в плоских крышах необходим и имеет смысл при первой же возможности; тем более, что __[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})__ предлагает простой и легкий в использовании путь быстро обнаружить местонахождение протечек. 
+* Обнаружение и ремонт протечек в плоских крышах необходим и имеет смысл при первой же возможности; 
+тем более, что __[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})__ предлагает простой и легкий в использовании путь быстро обнаружить местонахождение протечек. 
 
 * Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __Электро-искровое дефектоскопирование__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
 * Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
-* На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+* На сегодняшний день __ЭИД единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
  
 *Альтернативное название этого метода - метод ЭВК Электро-векторное картирование  
 ###### &nbsp;
@@ -36,7 +37,7 @@ permalink: /электро-векторное-картирование
 На сегодняшний день данный метод является самым эффективным методом поиска дефектов мембранных кровельных покрытий.  
 ###### &nbsp;
 
-__Какие задачи стоят перед этим методом?__
+### __Какие задачи стоят перед этим методом?__
 
 * Задача быстро найти и локализовать все места повреждения на кровельном покрытии.
 
@@ -48,11 +49,11 @@ __Какие задачи стоят перед этим методом?__
 в) Система неэксплуатируемой инверсионной крыши.
 г) Система неэксплуатируемой балластной крыши.
 ###### &nbsp;
-__Когда проводится обследования?__
+### __Когда проводится обследования?__
 
 * Данный вид обследования можно проводить в любую погоду при температуре не ниже +5*
 ###### &nbsp;
-__Как проводится обследования?__
+### __Как проводится обследования?__
 
 * Для проведения обследования никакой предварительной подготовки от Вас не требуется. 
 * Нашим специалистам потребуется место подключения воды, для проливки кровельного покрытия и место подключения электропитания 220в. 
@@ -61,7 +62,7 @@ __Как проводится обследования?__
 
 * По завершению диагностики производится сбор, обработка данных и составляется Технический отчет о состоянии кровельного покрытия. 
 ###### &nbsp;
-__Что мы получим в итоге?__
+### __Что мы получим в итоге?__
 
 1)	Полную и объективную информацию о состоянии кровельного покрытия, с точным указанием количества и мест повреждения кровельного покрытия.  
 2)	Промаркированные поврежденные места на кровле, для быстрого нахождения поврежденных мест ремонтной бригадой. 
@@ -69,10 +70,10 @@ __Что мы получим в итоге?__
 4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.     
 ###### &nbsp;
 
-__Сколько это стоит?__
+### __Сколько это стоит?__
 
 * Цена на проведение работ составляется исходя из технического задания.
-###### &nbsp;
+
 __Пример технического задания:__
 
 1)	Инструментальное обследование - кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие.  
@@ -83,7 +84,7 @@ __Пример технического задания:__
 __Цена проведения ЭИД = 60р.м2__
 
 *цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)
-
+###### &nbsp;
 
 
 
