--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -26,7 +26,7 @@ permalink: /электро-векторное-картирование
 5.	Сколько это стоит?
 6.	Каков принцип работы ЭИД?
 ###### &nbsp;
-### __ЭИД что это такое?__  
+#### __ЭИД что это такое?__  
 
 * ЭИД – это метод диагностики повреждений кровельных мембран (пвх, эпдм, тпо).  
 
@@ -37,7 +37,7 @@ permalink: /электро-векторное-картирование
 На сегодняшний день данный метод является самым эффективным методом поиска дефектов мембранных кровельных покрытий.  
 ###### &nbsp;
 
-### __Какие задачи стоят перед этим методом?__
+#### __Какие задачи стоят перед этим методом?__
 
 * Задача быстро найти и локализовать все места повреждения на кровельном покрытии.
 
@@ -49,11 +49,13 @@ permalink: /электро-векторное-картирование
 в) Система неэксплуатируемой инверсионной крыши.
 г) Система неэксплуатируемой балластной крыши.
 ###### &nbsp;
-### __Когда проводится обследования?__
+
+#### __Когда проводится обследования?__
 
 * Данный вид обследования можно проводить в любую погоду при температуре не ниже +5*
 ###### &nbsp;
-### __Как проводится обследования?__
+
+#### __Как проводится обследования?__
 
 * Для проведения обследования никакой предварительной подготовки от Вас не требуется. 
 * Нашим специалистам потребуется место подключения воды, для проливки кровельного покрытия и место подключения электропитания 220в. 
@@ -62,15 +64,16 @@ permalink: /электро-векторное-картирование
 
 * По завершению диагностики производится сбор, обработка данных и составляется Технический отчет о состоянии кровельного покрытия. 
 ###### &nbsp;
-### __Что мы получим в итоге?__
 
-1)	Полную и объективную информацию о состоянии кровельного покрытия, с точным указанием количества и мест повреждения кровельного покрытия.  
-2)	Промаркированные поврежденные места на кровле, для быстрого нахождения поврежденных мест ремонтной бригадой. 
-3)	Технический отчет о состоянии кровельного покрытия.
-4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.     
+#### __Что мы получим в итоге?__
+
+1)	Полную и объективную информацию о состоянии кровельного покрытия, с точным указанием количества и мест повреждения кровельного покрытия.    
+2)	Промаркированные поврежденные места на кровле, для быстрого нахождения поврежденных мест ремонтной бригадой.   
+3)	Технический отчет о состоянии кровельного покрытия.  
+4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.       
 ###### &nbsp;
 
-### __Сколько это стоит?__
+#### __Сколько это стоит?__
 
 * Цена на проведение работ составляется исходя из технического задания.
 
@@ -82,7 +85,6 @@ __Пример технического задания:__
 *(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию).
 
 __Цена проведения ЭИД = 60р.м2__
-
 *цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)
 ###### &nbsp;
 
