--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -19,12 +19,12 @@ permalink: /электро-векторное-картирование
  
 *Альтернативное название этого метода - метод ЭВК Электро-векторное картирование  
 ###### &nbsp;
-1.	ЭИД что это такое?
-2.	Какие задачи стоят перед этим методом?
-3.	Когда и как проводится обследования?
-4.	Что мы получим в итоге?
-5.	Сколько это стоит?
-6.	Каков принцип работы ЭИД?
+__1.	ЭИД что это такое?__
+__2.	Какие задачи стоят перед этим методом?__
+__3.	Когда и как проводится обследования?__
+__4.	Что мы получим в итоге?__
+__5.	Сколько это стоит?__
+__6.	Каков принцип работы ЭИД?__
 ###### &nbsp;
 #### __ЭИД что это такое?__  
 
@@ -70,7 +70,9 @@ permalink: /электро-векторное-картирование
 1)	Полную и объективную информацию о состоянии кровельного покрытия, с точным указанием количества и мест повреждения кровельного покрытия.    
 2)	Промаркированные поврежденные места на кровле, для быстрого нахождения поврежденных мест ремонтной бригадой.   
 3)	Технический отчет о состоянии кровельного покрытия.  
-4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.       
+4)	Карту дефектов на кровле, для руководителей и инженеров. Данный документ поможет вам при проведении точечного ремонта и при последующем (гарантийном) контроле качества ремонта.    
+5)	Описание найденных нарушений, дефектная ведомость.    
+6)	Фотофиксацию состояния кровли и найденных нарушений.  
 ###### &nbsp;
 
 #### __Сколько это стоит?__
@@ -88,7 +90,14 @@ __Цена проведения ЭИД = 60р.м2__
 *цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)
 ###### &nbsp;
 
+#### __Каков принцип работы ЭИД?__
 
+Диагностика кровельных мембран методом электроискрового дефектоскопирования производится путем создания разности электрических потенциалов между поверхностью нетокопроводящего слоя гидроизоляции и токропровдящей основы (армированная цементная стяжка, железобетонная плита, грун, металлический профилированный настил и т.п.).
+
+На предварительно увлажненную поверхность гидроизоляционного материала вокруг тестируемой области укладывается кабель, который подключается к одному из контактов импульсного генератора. Второй контакт генератора подключают к основанию, находящемуся под мембраной. Сама мембрана в этой схеме выступает в роли изолятора.
+
+При наличии повреждений в мембране-изоляторе в месте дефекта возникает электрический ток. Используя специальные методы измерений определяется направление электрического тока на увлаженной поверхности мембраны в различных точках, которое точно указывает на расположение дефекта, с точностью обнаружения дефектов до 1 мм.
+###### &nbsp;
 
 
   
@@ -108,11 +117,6 @@ __Цена проведения ЭИД = 60р.м2__
 
 
 
-На плоских крышах могут происходить утечки по различным причинам и в любой момент их срока службы. Рабочие могут случайно (и неосознанно) пробить водонепроницаемую мембрану крыши еще до завершения строительства. Экстремальные погодные условия, мусор и плохое строительство могут привести к протечке кровли. Эти протечки часто слишком малы, чтобы заметить невооруженным глазом, но если их оставить, они могут привести к существенному повреждению конструкции здания в кратчайшие сроки.
-
-Обнаружение и ремонт протечек в плоских крышах необходим и имеет смысл при первой же возможности; тем более, что **Детектор протечек Buckleys Wet Roof Pro’** предлагает простой и легкий в использовании путь быстро обнаружить местонахождение протечек.
-
-В настоящее время подавляющее большинство плоских крыш построено из электропроводящих материалов, таких как сталь или бетон, и многие из них имеют фольгированный изоляционный слой непосредственно под поверхностной мембраны. **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства этих материалов, для того чтобы обнаружить местонахождение протечки путем пропускания тока через дефекты к Земле.
 
 ### Типичная однослойная плоская конструкция крыши
 {% include el-img.html name="evk/EVK.007.jpg" align="left" width="1/2" %}
@@ -126,11 +130,7 @@ __Цена проведения ЭИД = 60р.м2__
 
 ### **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**
 
-1)	Этапы работы     
-2)	Результаты обследования  
-3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле)  
-4)	Описание найденных нарушений, дефектная ведомость  
-5)	Фотофиксация состояния кровли и найденных нарушений  
+ 
   
 #### Карта дефектов на кровле:
 {% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
