--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -34,7 +34,7 @@ __6.	Каков принцип работы ЭИД?__
 
 * Данный метод диагностики проводится специалистами по диагностике и ремонту кровельного покрытия с применением аппарата – ЭЛЕКТРО ИСКРОВОЙ ДЕФЕКТОСКОП.   
 
-На сегодняшний день данный метод является самым эффективным методом поиска дефектов мембранных кровельных покрытий.  
+* На сегодняшний день данный метод является самым эффективным методом поиска дефектов мембранных кровельных покрытий.  
 ###### &nbsp;
 
 #### __Какие задачи стоят перед этим методом?__
@@ -43,11 +43,11 @@ __6.	Каков принцип работы ЭИД?__
 
 * ЭИД или (ЭВК) выявляет повреждения кровельного покрытия, таких как: порезы, проколы, ожоги, несваренные швы.
 
-* Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
-а) Система эксплуатируемой крыши с зелеными насаждениями.
-б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.
-в) Система неэксплуатируемой инверсионной крыши.
-г) Система неэксплуатируемой балластной крыши.
+* Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев:  
+а) Система эксплуатируемой крыши с зелеными насаждениями.  
+б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
+в) Система неэксплуатируемой инверсионной крыши.  
+г) Система неэксплуатируемой балластной крыши.  
 ###### &nbsp;
 
 #### __Когда проводится обследования?__
@@ -58,6 +58,7 @@ __6.	Каков принцип работы ЭИД?__
 #### __Как проводится обследования?__
 
 * Для проведения обследования никакой предварительной подготовки от Вас не требуется. 
+
 * Нашим специалистам потребуется место подключения воды, для проливки кровельного покрытия и место подключения электропитания 220в. 
 
 * Оператор ЭИД, проходит по всей поверхности кровли и маркирует поврежденные места, после чего они вносятся в [(Карту дефектов кровли)]({% link 7.1.2.2_final_step.md %})
@@ -77,17 +78,17 @@ __6.	Каков принцип работы ЭИД?__
 
 #### __Сколько это стоит?__
 
-* Цена на проведение работ составляется исходя из технического задания.
+___*Цена на проведение работ составляется исходя из технического задания.___
 
 __Пример технического задания:__
 
 1)	Инструментальное обследование - кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие.  
 2)	Составление Технического отчета.  
 3)	Составление Карты дефектов на кровле.   
-*(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию).
+_*(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию)._
 
 __Цена проведения ЭИД = 60р.м2__  
-*цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)
+_*цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)_
 ###### &nbsp;
 
 #### __Каков принцип работы ЭИД?__
