--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -77,7 +77,7 @@ __6.	Каков принцип работы ЭИД?__
 ###### &nbsp;
 
 #### __Сколько это стоит?__
-
+{% include el-img.html name="0/1.2.8.jpg" align="left" width="1/3" %}
 ___*Цена на проведение работ составляется исходя из технического задания.___
 
 __Пример технического задания:__
