--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -19,12 +19,12 @@ permalink: /электро-векторное-картирование
  
 *Альтернативное название этого метода - метод ЭВК Электро-векторное картирование  
 ###### &nbsp;
-__1.	ЭИД что это такое?__  
-__2.	Какие задачи стоят перед этим методом?__  
-__3.	Когда и как проводится обследования?__  
-__4.	Что мы получим в итоге?__  
-__5.	Сколько это стоит?__  
-__6.	Каков принцип работы ЭИД?__  
+__1.	[ЭИД что это такое?](#эид-что-это-такое)__  
+__2.	[Какие задачи стоят перед этим методом?](#какие-задачи-стоят-перед-этим-методом)__  
+__3.	[Когда и как проводится обследования?](#когда-проводится-обследования)__  
+__4.	[Что мы получим в итоге?](#что-мы-получим-в-итоге)__  
+__5.	[Сколько это стоит?](#сколько-это-стоит)__  
+__6.	[Каков принцип работы ЭИД?](#каков-принцип-работы-эид)__  
 ###### &nbsp;
 #### __ЭИД что это такое?__  
 
