--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -4,6 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
+galpath: evk
 permalink: /электро-векторное-картирование
 ---
 {% include el-img.html name="0/1.2.1.jpg"  %} 
