--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -12,7 +12,7 @@ permalink: /электро-векторное-картирование
 * На плоских крышах могут происходить утечки по различным причинам и в любой момент их срока службы. Рабочие могут случайно (и неосознанно) пробить водонепроницаемую мембрану крыши еще до завершения строительства. Экстремальные погодные условия, мусор и плохое строительство могут привести к протечке кровли. Эти протечки часто слишком малы, чтобы заметить невооруженным глазом, но если их оставить, они могут привести к существенному повреждению конструкции здания в кратчайшие сроки.  
 
 * Обнаружение и ремонт протечек в плоских крышах необходим и имеет смысл при первой же возможности; 
-тем более, что __[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})__ предлагает простой и легкий в использовании путь быстро обнаружить местонахождение протечек. 
+тем более, что __[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})__ предлагает простой и легкий в использовании путь быстро обнаружить местонахождение повреждения. 
 
 * Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __Электро-искровое дефектоскопирование__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
 * Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
