--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -88,7 +88,7 @@ __Пример технического задания:__
 3)	Составление Карты дефектов на кровле.   
 _*(если есть необходимость привязать карту дефектов к осям, необходимо иметь план кровли, чертеж, проектную документацию)._
 
-__Цена проведения ЭИД = 60р.м2__  
+__Цена проведения ЭИД = от 10 до 120р.м2 в зависимости от объема и сложности выполнения работ__  
 _*цена складывается из нескольких факторов проведения работ (необходимо уточнять у менеджера)_
 ###### &nbsp;
 
