--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -58,13 +58,13 @@ __6.	[Каков принцип работы ЭИД?](#каков-принцип
 
 #### __Как проводится обследования?__
 
-* Для проведения обследования никакой предварительной подготовки от Вас не требуется. 
+•	Для проведения ЭИД обследования, наши специалисты подводят воду к месту обследования, подключают и настраивают оборудование.  
 
-* Нашим специалистам потребуется место подключения воды, для проливки кровельного покрытия и место подключения электропитания 220в. 
+•	На поверхности кровли создается водяная пленка и специалист приступает к работе.  
 
-* Оператор ЭИД, проходит по всей поверхности кровли и маркирует поврежденные места, после чего они вносятся в [(Карту дефектов кровли)]({% link 7.1.2.2_final_step.md %})
+•	В процессе проверки кровли оператор ЭИД маркирует поврежденные места, после чего они вносятся в [(Карту дефектов кровли)]({% link 7.1.2.2_final_step.md %})  
 
-* По завершению диагностики производится сбор, обработка данных и составляется Технический отчет о состоянии кровельного покрытия. 
+•	По завершению диагностики производится сбор, обработка данных и составляется Технический отчет о состоянии кровельного покрытия.  
 ###### &nbsp;
 
 #### __Что мы получим в итоге?__
