--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -29,11 +29,12 @@ permalink: /высотное-обследование
 Проводим обследование жилых, гражданских и промышленных объектов, а также представляющих культурно-историческую ценность.  
 
 __Комплекс по обследованию объектов производится в следующих случаях:__
-- необходимость выполнения регламентированных осмотров конструкций объекта.
-- необходимость при обнаружении деформации, трещин, разрушения элементов конструкций.
-- необходимость проведения капитального, локального, текущего ремонта.
-- необходимость модернизации, переустройства здания.
-- необходимость возобновления строительства законсервированного объекта.
+- необходимость выполнения регламентированных осмотров конструкций объекта  
+- необходимость при обнаружении деформации, трещин, разрушения элементов конструкций  
+- необходимость проведения капитального, локального, текущего ремонта  
+- необходимость модернизации, переустройства здания  
+- необходимость возобновления строительства законсервированного объекта  
+- необходимость принять выполненные подрядчиком работы  
 
 
 По результатам проведенных комплексных изыскания Вы получаете __[техническое заключение]({% link 1.4_Tech_conclus.md %})__ с подробным описание обнаруженных дефектов.
